@@ -14,6 +14,7 @@
             Add Object.addListener(same as '.on') and prependListener to allow a handler to be added first
             Fix regression with g.wrapString and long UTF8 strings (fix #2385)
             Bangle.js2: Fix reusing touch coordinates under high load (fix #2374)
+            Bangle.js: Add Bangle.setBacklight(), Bangle.backlight event, Bangle.isBacklightOn() and allow input when lcd off if lockTimeout is 0 (fix #2383)
             
      2v18 : Fix drawString with setClipRect with 90/270-degree rotation (fix #2343)
             Pico/Wifi: Enabled JIT compiler
